Modified the boarder colors. Fixed some scrollbar issues

--- a/include/styles.css
+++ b/include/styles.css
@@ -23,8 +23,9 @@
 
     --fg-color-hover: var(--grey-9);
     --bg-color-hover: var(--grey-1);
-    --bg-color-hover-alt: var(--grey-3);
+    --bg-color-hover-alt: var(--grey-2);
     --border-width-hover: 2px;
+    --border-color: var(--grey-3);
 
     --h1-size: 2.5rem;
     --scale-ratio: 1.2;
@@ -43,8 +44,10 @@
 html {
     font-size: 1rem;
     font-family: var(--page-font-family); 
+    width: 100%;
     height: 100%;
     overflow-y: scroll;
+    //background-color: red;
 }
 
 *, *::before, *::after {
@@ -75,7 +78,9 @@ svg {
 body::-webkit-scrollbar {
     border-width: 0 0 0 var(--border-width);
     border-style: solid;
+    border-color: var(--border-color);
     border-color: var(--grey-1);
+    background-color: var(--bg-color);
 }
 
 //body::-webkit-scrollbar-thumb {
@@ -90,7 +95,7 @@ body::-webkit-scrollbar {
     //background-color: red; 
     //border-width: 1px;
     //border-style: solid;
-    //border-color: var(--fg-color);
+    //border-color: var(--border-color);
     border-radius: 100vw;
     //margin-block: .5rem;
 }
@@ -124,6 +129,7 @@ body::-webkit-scrollbar {
 body {
     display: grid;
     width: 100%;
+    height: auto;
     grid-template-columns: 25rem 1fr;
     grid-template-rows: 5rem auto 5rem; 
     grid-template-areas:
@@ -131,8 +137,10 @@ body {
         "side-nav main"
         "footer footer";
     min-height: 100vh;
+    overflow: hidden;
     //height: 100vh;
     //overflow-y: scroll;
+    //background-color: blue;
 }
 
 
@@ -274,9 +282,9 @@ body {
     min-width: 0;
     padding: 4rem 3rem 4rem 4rem;
     gap: 4rem;
+    background-color: var(--bg-color);
     //justify-content: center;
     //justify-content: left;
-    //background-color: pink;
     //overflow-y: scroll;
     //scrollbar-gutter: auto;
 }
@@ -318,7 +326,7 @@ body {
     //border-width: 0 var(--border-width) 0 0;
     border-width: 0 0 var(--border-width) 0;
     border-style: solid;
-    border-color: var(--fg-color);
+    border-color: var(--border-color);
     //height: 100vh;
     padding: 0rem 2rem 0rem 2rem;
     overflow: auto;
@@ -331,7 +339,7 @@ body {
     grid-template-rows: 1fr;
     height: 3rem;
     border-width: var(--border-width) 0 0 0;
-    border-color: var(--fg-color);
+    border-color: var(--border-color);
 }
 
 .side-nav {
@@ -344,7 +352,7 @@ body {
     background-color: var(--bg-color);
     border-width: 0 var(--border-width) 0 0;
     border-style: solid;
-    border-color: var(--fg-color);
+    border-color: var(--border-color);
     padding: 2rem 1rem 4rem 1rem;
     //height: calc(100vh - 5rem);
     //padding: 2rem 0rem 4rem 1rem;
@@ -464,7 +472,7 @@ body {
     justify-content: center;
     border-width: var(--border-width);
     border-style: solid;
-    border-color: var(--fg-color);
+    border-color: var(--border-color);
     border-radius: var(--border-radius);
 }
 
@@ -523,6 +531,7 @@ body {
     color: var(--fg-color);
     border-radius: var(--border-radius);
     border-width: var(--border-width);
+    border-color: var(--border-color);
     //font-weight: var(--font-weight-button);
     text-decoration: none;
 }
@@ -580,7 +589,7 @@ body {
     //background-color: pink;
     //border-width: var(--border-width);
     border-style: solid;
-    border-color: var(--fg-color);
+    border-color: var(--border-color);
     border-radius: var(--border-radius);
 }
 
@@ -610,7 +619,7 @@ body {
     justify-content: center;
     //border-width: var(--border-width);
     border-style: solid;
-    border-color: var(--fg-color);
+    border-color: var(--border-color);
     border-radius: var(--border-radius);
 }
 
@@ -663,7 +672,7 @@ body {
     grid-template-rows: 12rem 3rem;
     border-width: var(--border-width);
     border-radius: var(--border-radius);
-    border-color: var(--fg-color);
+    border-color: var(--border-color);
     border-style: solid;
     overflow: hidden;
     align-items: center;
